[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KubePy-Hound"
version = "0.1.0"
requires-python = ">=3.11"
description = "A BloodHound k8s resource collector"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "duckdb>=1.3.2",
    "kubernetes>=33.1.0",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.2",
    "typer>=0.17.4",
]

[project.scripts]
kubepy-hound = "main:app"

[tool.setuptools]
include-package-data = true
'py-modules' = ["main"]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
